# pytest-llm-assert

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml  stale.yml
docs/: GITHUB_SETUP_GUIDE.md  README.md  api-reference.md  comparing-models.md  configuration.md
examples/: README.md  conftest.py  pytest_conftest.py  test_basic.py  test_compare_models.py
src/pytest_llm_assert/: __init__.py  core.py  plugin.py
src/pytest_llm_assert/prompts/: system_prompt.md
tests/integration/: test_llm_integration.py
tests/unit/: test_assertion_result.py  test_azure_auth.py  test_error_handling.py  test_fixture_integration.py  test_llm_assert.py  test_llm_assert_core.py  test_llm_response.py  test_plugin.py  test_response_parsing.py
